--- a/frontend/login.html
+++ b/frontend/login.html
@@ -20,6 +20,6 @@
           <button type="submit">Log In</button>
         </form>
       </div>
-      
+      <script src="script.js"></script>
 </body>
 </html>
