--- a/frontend/login.html
+++ b/frontend/login.html
@@ -9,17 +9,21 @@
 </head>
 <body>
     <div class="login-container">
-        <h1>Log In</h1>
-        <form>
-          <label for="email">Email:</label>
+      <h1>Welcome to Group-Chat Application</h1>
+      <h2>Login to continue</h2>
+        <form onsubmit="logInfunc(event)">
+          <label for="email">Email</label>
           <input type="email" id="email" name="email">
           <br>
-          <label for="password">Password:</label>
+          <label for="password">Password</label>
           <input type="password" id="password" name="password">
           <br>
           <button type="submit">Log In</button>
         </form>
+        <div id="otherPage">
+          <h2>Not a user? click here to signup --> <a href="./signup.html">Sign Up</a></h2>
+        </div>
       </div>
-      <script src="script.js"></script>
+      <script src="login.js"></script>
 </body>
 </html>
