--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -23,7 +23,11 @@
           <button type="submit">Sign Up</button>
         </form>
         <div id="message-container">
-          
+
+        </div>
+
+        <div id="otherPage">
+          <h2>Already a user? click here to login --> <a href="./login.html">Log In</a></h2>
         </div>
       </div> 
       <script src="script.js"></script>    
