implemented jwt and login authentication

--- a/frontend/signup.html
+++ b/frontend/signup.html
@@ -30,7 +30,7 @@
           <h2>Already a user? click here to login --> <a href="./login.html">Log In</a></h2>
         </div>
       </div> 
-      <script src="script.js"></script>    
+      <script src="signup.js"></script>    
       <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.5/axios.min.js" integrity="sha512-JEXkqJItqNp0+qvX53ETuwTLoz/r1Tn5yTRnZWWz0ghMKM2WFCEYLdQnsdcYnryMNANMAnxNcBa/dN7wQtESdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
 </body>
 </html>
