--- a/frontend/login.html
+++ b/frontend/login.html
@@ -25,5 +25,6 @@
         </div>
       </div>
       <script src="login.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.5/axios.min.js" integrity="sha512-JEXkqJItqNp0+qvX53ETuwTLoz/r1Tn5yTRnZWWz0ghMKM2WFCEYLdQnsdcYnryMNANMAnxNcBa/dN7wQtESdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
 </body>
 </html>
