created a msg table to store messages from the chat and linked API to backend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -14,21 +14,22 @@
           <h1>Group Chat</h1>
         </div>
         <div class="chat-messages">
-          <div class="message-container">
+          <!-- <div class="message-container">
             <p class="message-username">User 1:</p>
             <p class="message-text">Hello, everyone!</p>
           </div>
           <div class="message-container">
             <p class="message-username">User 2:</p>
             <p class="message-text">Hi, User 1! How's it going?</p>
-          </div>
+          </div> -->
         </div>
         <div class="chat-input">
           <textarea placeholder="Type your message here..."></textarea>
-          <button>Send</button>
+          <button onclick="chatButton(event)">Send</button>
         </div>
       </div>
-      
+      <script src="index.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/1.2.5/axios.min.js" integrity="sha512-JEXkqJItqNp0+qvX53ETuwTLoz/r1Tn5yTRnZWWz0ghMKM2WFCEYLdQnsdcYnryMNANMAnxNcBa/dN7wQtESdw==" crossorigin="anonymous" referrerpolicy="no-referrer"></script> 
   </body>
   
 </html>
