--- a/frontend/index.html
+++ b/frontend/index.html
@@ -13,7 +13,7 @@
         <div class="chat-header">
           <h1>Group Chat</h1>
         </div>
-        <div class="chat-messages">
+        <div class="chat-messages" id="chatblock">
           <!-- <div class="message-container">
             <p class="message-username">User 1:</p>
             <p class="message-text">Hello, everyone!</p>
