Storing latest messages on local storage for faster reading and implemented button to get All messages if user wants

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -26,6 +26,7 @@
         <div class="chat-input">
           <textarea placeholder="Type your message here..."></textarea>
           <button onclick="chatButton(event)">Send</button>
+          <button onclick="getAll()">All Messages</button>
         </div>
       </div>
       <script src="index.js"></script>
