fixed UI bugs and added headers section, created group table

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,8 +11,20 @@
 <body>
     <div class="chat-container">
         <div class="chat-header">
-          <h1>Group Chat</h1>
+          <h1>Group Chat APP</h1>
         </div>
+         <div class="side-section">
+    <h2>Your Groups</h2>
+    <ul class="group-list" id="group-list">
+      <li><a href="#group1">Group 1</a></li>
+      <li><a href="#group2">Group 2</a></li>
+      <li><a href="#group3">Group 3</a></li>
+    </ul>
+    <button class="create-group-btn" onclick="createGroup()">Create Group</button>
+  </div>
+  <div class="chat-headers">
+    <h3>New Group</h3>
+  </div>
         <div class="chat-messages" id="chatblock">
           <!-- <div class="message-container">
             <p class="message-username">User 1:</p>
@@ -24,7 +36,7 @@
           </div> -->
         </div>
         <div class="chat-input">
-          <textarea placeholder="Type your message here..."></textarea>
+          <textarea placeholder="Type your message here..." id="textArea"></textarea>
           <button onclick="chatButton(event)">Send</button>
           <button onclick="getAll()">All Messages</button>
         </div>
