--- a/frontend/index.html
+++ b/frontend/index.html
@@ -33,8 +33,8 @@
 
     <div id="user-container">
       <h2>Users</h2>
-      <ul class="user-list">
-        <ul class="user-list li">
+      <ul class="user-list" id="userlist">
+        <!-- <ul class="user-list li">
           <span>User 1</span>
           <button>Make Admin</button>
           <button>X</button>
@@ -48,7 +48,7 @@
           <span>User 3</span>
           <button>Make Admin</button>
           <button>X</button>
-        </ul>
+        </ul> -->
       </ul>
     </div>
   </div>
